header:add navbar top markup using bootstrap classes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-
+  <header>
+    <!-- navbar top -->
+    <nav class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center">
+    </nav>
+  </header>
   <!-- bootstrap js scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
