nav:company name and font awesome icon for logo

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   <!-- bootstrap 4.6 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <!-- font awesome icons -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
   <header>
     <!-- navbar top -->
     <nav class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center">
+      <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket"></i>Zattix</a>
     </nav>
   </header>
   <!-- bootstrap js scripts -->
