nav:add navbar collapse toggle button from bootstrap

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- navbar top -->
     <nav class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket"></i>Zattix</a>
+      <!-- toggle button -->
+      <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle
+          navigation</span><span class="navbar-toggler-icon"></span></button>
     </nav>
   </header>
   <!-- bootstrap js scripts -->
