nav:placeholder for categories in collections drop down in navbar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
           <li class="nav-item"><a class="nav-link active" href="#"><i class="fa fa-home"></i>&nbsp;HOME</a></li>
           <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown"
               href="#"><i class="fa fa-th"></i>&nbsp;Collections&nbsp;</a>
-
+            <!-- drop down items in collectons -->
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">First Item</a>
+              <a class="dropdown-item" href="#">Second Item</a>
+              <a class="dropdown-item" href="#">Third Item</a>
+            </div>
           </li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>PURCHASE LIST</a></li>
         </ul>
