--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           navigation</span><span class="navbar-toggler-icon"></span></button>
       <!-- collapsible nav bar- expand from md screen -->
       <div class="collapse navbar-collapse" id="navcol">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link active" href="#"><i class="fa fa-home"></i>&nbsp;HOME</a></li>
           <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown"
               href="#"><i class="fa fa-th"></i>&nbsp;Collections&nbsp;</a>
