nav:navbar end items such as ad, user data placeholder

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           navigation</span><span class="navbar-toggler-icon"></span></button>
       <!-- collapsible nav bar- expand from md screen -->
       <div class="collapse navbar-collapse" id="navcol">
+        <!-- nav bar center items -->
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link active" href="#"><i class="fa fa-home"></i>&nbsp;HOME</a></li>
           <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown"
@@ -38,6 +39,15 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>PURCHASE LIST</a></li>
         </ul>
+        <!-- navbar end items -->
+        <div class="d-flex flex-row align-items-center">
+          <button class="btn btn-primary" type="button">Button</button>
+          <div>
+            <span class="navbar-text">Samrood
+            </span>
+            <i class="fa fa-envelope align-self-center"></i>
+          </div>
+        </div>
       </div>
     </nav>
   </header>
