nav:button,span and icon from font awesome for nav end items and layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span class="sr-only">Toggle
           navigation</span><span class="navbar-toggler-icon"></span></button>
       <!-- collapsible nav bar- expand from md screen -->
-      <div class="collapse navbar-collapse" id="navcol">
+      <div class="collapse navbar-collapse justify-content-between" id="navcol">
         <!-- nav bar center items -->
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link active" href="#"><i class="fa fa-home"></i>&nbsp;HOME</a></li>
@@ -40,8 +40,8 @@
           <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i>PURCHASE LIST</a></li>
         </ul>
         <!-- navbar end items -->
-        <div class="d-flex flex-row align-items-center">
-          <button class="btn btn-primary" type="button">Button</button>
+        <div class="d-flex flex-row align-items-center justify-content-between">
+          <button class="btn btn-primary mr-auto" type="button">Button</button>
           <div>
             <span class="navbar-text">Samrood
             </span>
