nav:button right margin for md and auto for sm screens

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </ul>
         <!-- navbar end items -->
         <div class="d-flex flex-row align-items-center justify-content-between">
-          <button class="btn btn-primary mr-auto" type="button">Button</button>
+          <button class="btn btn-primary mr-auto mr-md-5" type="button">POST AN AD</button>
           <div>
             <span class="navbar-text">Samrood
             </span>
