asset:navbar user picture

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <span class="navbar-text">Samrood
             </span>
             <i class="fa fa-envelope align-self-center"></i>
+            <!-- my picture as user -->
+            <picture style="border-radius: 50%;"><img src="assets/samrood.jpg"></picture>
           </div>
         </div>
       </div>
