nav:placement for user details from right to left

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           AD</button>
         <!-- navbar end items -->
         <div class="d-flex flex-row align-items-center flex-nowrap d-flex align-items-center ">
-          <div class="ml-auto mt-4 mt-md-0">
+          <div class=" mt-4 mt-md-0">
             <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
             <span class="navbar-text text-light mx-1">Samrood
             </span>
