nav:anchor tags for user details elements

--- a/index.html
+++ b/index.html
@@ -51,10 +51,14 @@
         <!-- navbar end items -->
         <div class="d-flex flex-row align-items-center flex-nowrap d-flex align-items-center ">
           <div class=" mt-4 mt-md-0">
-            <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
-            <span class="navbar-text text-light mx-1">Samrood
-            </span>
-            <i class="fa fa-envelope align-self-center text-light mx-1"></i>
+            <a href="#">
+              <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
+            </a>
+            <a href="#">
+              <span class="navbar-text text-light mx-1">Samrood
+              </span>
+            </a>
+            <a href="#"><i class="fa fa-envelope align-self-center text-light mx-1"></i></a>
             <!-- my picture as user -->
           </div>
         </div>
