nav:position fixed on top and width 100%

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <!-- navbar top -->
-    <nav class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal">
+    <nav class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red"></i><span
           class="text-light">Zattix</span></a>
       <!-- toggle button -->
@@ -49,7 +49,7 @@
           AN
           AD</button>
         <!-- navbar end items -->
-        <div class="d-flex flex-row align-items-center flex-nowrap d-flex align-items-center ">
+        <div class="d-flex flex-row align-items-center flex-nowrap d-flex align-items-center">
           <div class=" mt-4 mt-md-0">
             <a href="#">
               <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
