nav:company name capitalised in nav

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- navbar top -->
     <nav class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red"></i><span
-          class="text-light">Zattix</span></a>
+          class="text-light">ZATTIX</span></a>
       <!-- toggle button -->
       <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span class="sr-only">Toggle
           navigation</span><span class="navbar-toggler-icon"></span></button>
@@ -64,6 +64,9 @@
         </div>
       </div>
     </nav>
+    <section>
+
+    </section>
   </header>
   <!-- bootstrap js scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
