nav:padding fix for the navbar

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 </head>
 
 <body>
-  <header>
+  <header class="">
     <!-- navbar top -->
-    <nav class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100">
-      <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red"></i><span
-          class="text-light">ZATTIX</span></a>
+    <nav
+      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100 p-3">
+      <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
+          class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
       <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span class="sr-only">Toggle
           navigation</span><span class="navbar-toggler-icon"></span></button>
@@ -49,16 +50,16 @@
           AN
           AD</button>
         <!-- navbar end items -->
-        <div class="d-flex flex-row align-items-center flex-nowrap d-flex align-items-center">
-          <div class=" mt-4 mt-md-0">
+        <div class="d-flex flex-row align-items-center d-flex align-items-center px-2">
+          <div class=" mt-4 mt-md-0 flex-nowrap">
             <a href="#">
               <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
             </a>
             <a href="#">
-              <span class="navbar-text text-light mx-1">Samrood
+              <span class="navbar-text text-light">Sam
               </span>
             </a>
-            <a href="#"><i class="fa fa-envelope align-self-center text-light mx-1"></i></a>
+            <a href="#"><i class="fa fa-envelope align-self-center text-light mx-2"></i></a>
             <!-- my picture as user -->
           </div>
         </div>
