nav:button padding fix on lg screens

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="">
     <!-- navbar top -->
     <nav
-      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100 p-3">
+      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100 p-2">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
           class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
@@ -45,7 +45,7 @@
           </li>
 
         </ul>
-        <button class="py-1 mt-3 px-5 px-md-2 px-lg-5 ml-lg-4 my-sm-2 rounded border-0 bg-red text-light"
+        <button class="py-1 mt-3 px-5 px-md-2 px-lg-5 py-lg-2 m-0 ml-lg-4 my-sm-2 rounded border-0 bg-red text-light"
           type="button">POST
           AN
           AD</button>
