nav:border for navbar menu bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
       <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span class="sr-only">Toggle
-          navigation</span><span class="navbar-toggler-icon"></span></button>
+          navigation</span><i class="fa fa-bars red"></i></button>
       <!-- collapsible nav bar- expand from md screen -->
       <div class="collapse navbar-collapse justify-content-between" id="navcol">
         <!-- nav bar center items -->
