--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <header class="">
+  <header class="container-fluid px-0">
     <!-- navbar top -->
     <nav
       class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100 p-2">
@@ -50,7 +50,7 @@
           AN
           AD</button>
         <!-- navbar end items -->
-        <div class="d-flex flex-row align-items-center d-flex align-items-center px-2">
+        <div class="d-flex flex-row align-items-center d-flex align-items-center px-0 px-md-2">
           <div class=" mt-4 mt-md-0 flex-nowrap">
             <a href="#">
               <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
@@ -65,10 +65,28 @@
         </div>
       </div>
     </nav>
+    <!-- section for md to large screens -->
     <section>
-
     </section>
   </header>
+  <main class="container-fluid">
+    <section class="row">
+      <!-- top category info -->
+      <div></div>
+      <div>
+
+      </div>
+    </section>
+
+  </main>
+
+
+
+
+
+
+
+
   <!-- bootstrap js scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
