--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
     <section class="row">
       <!-- top category info -->
       <div></div>
-      <div>
+      <div class="container">
+        <div class="row row-cols-2">
 
+        </div>
       </div>
     </section>
 
