header:jumbotron markup with company name,dropdown, search and tags and search button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="container-fluid px-0">
     <!-- navbar top -->
     <nav
-      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100 p-2">
+      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100 p-1 p-lg-2">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
           class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
@@ -72,7 +72,18 @@
   <main class="container-fluid">
     <section class="row">
       <!-- top category info -->
-      <div></div>
+      <div class="jumbotron" style="text-align: center;">
+        <h1>ZATTIX</h1>
+        <p>Buying and Selling could not be simpler than this</p>
+        <p></p>
+        <div class="dropdown"><button class="btn btn-primary dropdown-toggle" aria-expanded="false"
+            data-toggle="dropdown" type="button">Dropdown </button>
+          <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item"
+              href="#">Second
+              Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+        </div><input type="search" /><input type="search" /><button class="btn btn-primary"
+          type="button">Button</button>
+      </div>
       <div class="container">
         <div class="row row-cols-2">
 
