jumbotron:elements for search alignment fix

--- a/index.html
+++ b/index.html
@@ -72,17 +72,24 @@
   <main class="container-fluid">
     <section class="row">
       <!-- top category info -->
-      <div class="jumbotron" style="text-align: center;">
-        <h1>ZATTIX</h1>
-        <p>Buying and Selling could not be simpler than this</p>
-        <p></p>
-        <div class="dropdown"><button class="btn btn-primary dropdown-toggle" aria-expanded="false"
-            data-toggle="dropdown" type="button">Dropdown </button>
-          <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item"
-              href="#">Second
-              Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-        </div><input type="search" /><input type="search" /><button class="btn btn-primary"
-          type="button">Button</button>
+      <div class="container-fluid mt-4 p-0">
+        <div class="jumbotron" style="text-align: center;">
+          <h1>ZATTIX</h1>
+          <p>Buying and Selling could not be simpler than this</p>
+          <div class="row row-cols-1 row-cols-md-4 justify-content-center">
+            <div class="dropdown d-inline"><button class="btn dropdown-toggle" aria-expanded="false"
+                data-toggle="dropdown" type="button">All Departments </button>
+              <!-- drop down -->
+              <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item"
+                  href="#">Second
+                  Item</a><a class="dropdown-item" href="#">Third Item</a>
+              </div>
+            </div>
+            <input type="search" placeholder="What are you searching for ?" />
+            <input type="search" placeholder="Enter tags" />
+            <button class="bg-charcoal text-light" type="button">Button</button>
+          </div>
+        </div>
       </div>
       <div class="container">
         <div class="row row-cols-2">
