carousel:placeholders for images in carousel

--- a/index.html
+++ b/index.html
@@ -96,6 +96,40 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <!-- slide 1 -->
+            <div>
+              <img src="#" alt="">
+
+
+
+
+
+              <span>Photo by <a
+                  href="https://unsplash.com/@mparzuchowski?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Michał
+                  Parzuchowski</a> on <a
+                  href="https://unsplash.com/s/photos/board-game?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+
+
+
+              <span>Photo by <a
+                  href="https://unsplash.com/@motivesandplaces?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Aksel
+                  Fristrup</a> on <a
+                  href="https://unsplash.com/s/photos/board-game?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+
+              <span>Photo by <a
+                  href="https://unsplash.com/@dmjdenise?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Denise
+                  Jans</a> on <a
+                  href="https://unsplash.com/s/photos/board-game?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+
+
+
+              <h2>HTC one m8</h2>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
+                ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
+                eligendi perspiciatis?</p>
+              <p>By <span>John Doe</span></p>
+              <button class="bg-red">$450</button>
+              <button class="bg-red">Purchase Details</button>
+            </div>
           </div>
           <div class="carousel-item">
             <!-- slide 2 -->
