carousel:slides for the carousel with images and attributes

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   </header>
   <main class="container-fluid">
     <section class="row">
+
       <!-- top category info -->
       <div class="container-fluid p-0">
         <div class="jumbotron mt-5" style="text-align: center;">
@@ -92,50 +93,83 @@
         </div>
       </div>
       <!-- carousel -->
-      <div data-ride="carousel" class="carousel slide carousel-fade" id="carousel-1">
+
+      <div data-ride="carousel" class="carousel slide carousel-" id="carousel-1">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <!-- slide 1 -->
-            <div>
-              <img src="#" alt="">
+            <div class="d-flex w-50 mx-auto">
+              <div>
+                <img src="./assets/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
+                  class="carousel-img">
+                <span class="sr-only">Photo by <a
+                    href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
+                    Dominguez</a> on <a
+                    href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+              </div>
+              <div>
 
-
-
-
-
-              <span>Photo by <a
-                  href="https://unsplash.com/@mparzuchowski?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Michał
-                  Parzuchowski</a> on <a
-                  href="https://unsplash.com/s/photos/board-game?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-
-
-
-              <span>Photo by <a
-                  href="https://unsplash.com/@motivesandplaces?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Aksel
-                  Fristrup</a> on <a
-                  href="https://unsplash.com/s/photos/board-game?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-
-              <span>Photo by <a
-                  href="https://unsplash.com/@dmjdenise?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Denise
-                  Jans</a> on <a
-                  href="https://unsplash.com/s/photos/board-game?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-
-
-
-              <h2>HTC one m8</h2>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
-                ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
-                eligendi perspiciatis?</p>
-              <p>By <span>John Doe</span></p>
-              <button class="bg-red">$450</button>
-              <button class="bg-red">Purchase Details</button>
+                <h2>HTC one m8</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
+                  ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
+                  eligendi perspiciatis?</p>
+                <p>By <span>John Doe</span></p>
+                <button class="bg-red">$450</button>
+                <button class="bg-red">Purchase Details</button>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <!-- slide 2 -->
+            <div class="d-flex w-50 mx-auto">
+              <div>
+                <img src="./assets/louis-hansel-shotsoflouis-M_dJ_ScwaLE-unsplash.jpg" alt="picture of piano category"
+                  class="carousel-img">
+                <span class="sr-only">Photo by <a
+                    href="https://unsplash.com/@louishansel?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Louis
+                    Hansel @shotsoflouis</a> on <a
+                    href="https://unsplash.com/s/photos/guitar?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+
+              </div>
+              <div>
+
+                <h2>HTC one m8</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
+                  ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
+                  eligendi perspiciatis?</p>
+                <p>By <span>John Doe</span></p>
+                <button class="bg-red">$450</button>
+                <button class="bg-red">Purchase Details</button>
+              </div>
+            </div>
+
           </div>
           <div class="carousel-item">
             <!-- slide 3 -->
+            <div class="d-flex w-50 mx-auto">
+              <div>
+                <img src="./assets/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
+                  class="carousel-img">
+                <span class="sr-only">Photo by <a
+                    href="https://unsplash.com/@chrisbulilan?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Chris
+                    Bulilan</a> on <a
+                    href="https://unsplash.com/s/photos/drums?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+
+
+              </div>
+              <div>
+
+                <h2>HTC one m8</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
+                  ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
+                  eligendi perspiciatis?</p>
+                <p>By <span>John Doe</span></p>
+                <button class="bg-red">$450</button>
+                <button class="bg-red">Purchase Details</button>
+              </div>
+            </div>
+
+
           </div>
         </div>
         <div><a href="#carousel-1" role="button" data-slide="prev" class="carousel-control-prev"><span
@@ -151,8 +185,6 @@
     </section>
 
   </main>
-
-
 
 
 
