carousel:background-color for the carousel

--- a/index.html
+++ b/index.html
@@ -96,9 +96,14 @@
 
       <div data-ride="carousel" class="carousel slide carousel-" id="carousel-1">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <!-- slide 1 -->
-            <div class="d-flex w-50 mx-auto">
+          <span class="sr-only">Photo by <a
+              href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
+              Dominguez</a> on <a
+              href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+
+          <!-- slide 1 -->
+          <div class="carousel-item slide active">
+            <div class="d-md-flex w-50 mx-auto">
               <div>
                 <img src="./assets/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
@@ -106,9 +111,9 @@
                     href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
                     Dominguez</a> on <a
                     href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+
               </div>
               <div>
-
                 <h2>HTC one m8</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
                   ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
@@ -119,9 +124,9 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <!-- slide 2 -->
-            <div class="d-flex w-50 mx-auto">
+          <!-- slide 2 -->
+          <div class="carousel-item slide">
+            <div class="d-md-flex w-50 mx-auto">
               <div>
                 <img src="./assets/louis-hansel-shotsoflouis-M_dJ_ScwaLE-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
@@ -142,11 +147,11 @@
                 <button class="bg-red">Purchase Details</button>
               </div>
             </div>
-
           </div>
-          <div class="carousel-item">
-            <!-- slide 3 -->
-            <div class="d-flex w-50 mx-auto">
+          <!-- slide 3 
+          -->
+          <div class="carousel-item slide">
+            <div class="d-md-flex w-50 mx-auto">
               <div>
                 <img src="./assets/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
@@ -154,11 +159,8 @@
                     href="https://unsplash.com/@chrisbulilan?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Chris
                     Bulilan</a> on <a
                     href="https://unsplash.com/s/photos/drums?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-
-
               </div>
               <div>
-
                 <h2>HTC one m8</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
                   ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
@@ -168,8 +170,6 @@
                 <button class="bg-red">Purchase Details</button>
               </div>
             </div>
-
-
           </div>
         </div>
         <div><a href="#carousel-1" role="button" data-slide="prev" class="carousel-control-prev"><span
