carousel: padding and margin

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
       <!-- carousel -->
 
-      <div data-ride="carousel" class="carousel slide carousel-" id="carousel-1">
+      <div data-ride="carousel" class="carousel slide px-md-5 text-center carousel-" id="carousel-1">
         <div class="carousel-inner">
           <span class="sr-only">Photo by <a
               href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
@@ -103,7 +103,7 @@
 
           <!-- slide 1 -->
           <div class="carousel-item slide active">
-            <div class="d-md-flex w-50 mx-auto">
+            <div class="d-md-flex mx-auto m-md-5 px-md-5">
               <div>
                 <img src="./assets/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
@@ -126,7 +126,7 @@
           </div>
           <!-- slide 2 -->
           <div class="carousel-item slide">
-            <div class="d-md-flex w-50 mx-auto">
+            <div class="d-md-flex mx-auto m-md-5 px-md-5">
               <div>
                 <img src="./assets/louis-hansel-shotsoflouis-M_dJ_ScwaLE-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
@@ -150,8 +150,8 @@
           </div>
           <!-- slide 3 
           -->
-          <div class="carousel-item slide">
-            <div class="d-md-flex w-50 mx-auto">
+          <div class="carousel-item">
+            <div class="d-md-flex mx-auto m-md-5 px-md-5">
               <div>
                 <img src="./assets/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
