jumbotron:set border-radius to zero

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <!-- top category info -->
       <div class="container-fluid p-0">
-        <div class="jumbotron mt-5" style="text-align: center;">
+        <div class="jumbotron mt-5 mb-0" style="text-align: center;">
           <h1>ZATTIX</h1>
           <p>Buying and Selling could not be simpler than this</p>
           <div class="row row-cols-1 row-cols-md-4 justify-content-center">
@@ -94,7 +94,7 @@
       </div>
       <!-- carousel -->
 
-      <div data-ride="carousel" class="carousel slide px-md-5 text-center carousel-" id="carousel-1">
+      <div data-ride="carousel pt-5" class="carousel slide px-md-5 text-center carousel-" id="carousel-1">
         <div class="carousel-inner">
           <span class="sr-only">Photo by <a
               href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
@@ -102,8 +102,8 @@
               href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 
           <!-- slide 1 -->
-          <div class="carousel-item slide active">
-            <div class="d-md-flex mx-auto m-md-5 px-md-5">
+          <div class="carousel-item slide active pt-5">
+            <div class="d-md-flex mx-auto m-md-5 px-md-3">
               <div>
                 <img src="./assets/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
@@ -126,7 +126,7 @@
           </div>
           <!-- slide 2 -->
           <div class="carousel-item slide">
-            <div class="d-md-flex mx-auto m-md-5 px-md-5">
+            <div class="d-md-flex mx-auto m-md-5 px-md-5 pt-3">
               <div>
                 <img src="./assets/louis-hansel-shotsoflouis-M_dJ_ScwaLE-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
@@ -134,10 +134,8 @@
                     href="https://unsplash.com/@louishansel?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Louis
                     Hansel @shotsoflouis</a> on <a
                     href="https://unsplash.com/s/photos/guitar?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-
               </div>
               <div>
-
                 <h2>HTC one m8</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio temporibus, in ipsam quis delectus
                   ipsum repellendus. Dolores quaerat iste commodi deleniti eius consectetur a dolorem fuga natus quos,
@@ -151,7 +149,7 @@
           <!-- slide 3 
           -->
           <div class="carousel-item">
-            <div class="d-md-flex mx-auto m-md-5 px-md-5">
+            <div class="d-md-flex mx-auto m-md-5 px-md-5 pt-3">
               <div>
                 <img src="./assets/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
